# programming-craft-essential

bash/intro/: 02_loop.sh  03_read_stdin.sh  04_loop_sequence.sh  05_arithmetic_op.sh  06_logic_operator.sh  07_stdin_read_char.sh
c/IDE/VSCode/: a.out  common.h  main.c  thread  threads.c
cpp/VSCode/lego_plot/: CMakeLists.txt  notes.txt  run_legoplot.sh  test_minimal  test_minimal.cpp
cpp/VSCode/lego_plot/inc/: Shader.hpp  Window.hpp
cpp/VSCode/lego_plot/src/: Shader.cpp  Window.cpp  main.cpp
cpp/VSCode/solving-exer/: 01_find_max  01_find_max.cpp  test_find_max.sh
cpp/intro-mit/: main.cpp  math_op.cpp  notes_compile.txt
csharp/IDE/VSCode/: VSCode.sln
csharp/building-apis-with-csharp-and-aspnet/setting-up-dotnet/: README.md
git/ssh-setup/: README.md
java/101_introduction/java_course/: pom.xml
network/mac-address/headphone/: README.md
python/algorithms/: 01_selection_sort.py
python/data-structure/interfaces/: __init__.py  base.py  operations.py  protocols.py
python/data-structure/lists/: linked-list.py
python/data-structure/nodes/: __init__.py  node.py
python/data-structure/stacks/: swap_operations.py
python/data-structure/utils/: __init__.py  validators.py
python/pattern-design/ch01/: README.md  abstractclass.py  composition.py  (+6 more)
python/python-wout-2ed/: 01_guessing_game.py
python/python_workshop/: 01_class.py  02_class_init.py  04_class_kargs.py  05_circle_instance_method.py  06_pet_instance_method.py  06_pet_instance_method2.py  07_class_kmsq_country.py  08_class_str_method.py  08_class_str_method2.py  09_class_static_method.py
(+245 files in other folders)
